# TODO-auth

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app-entrypoint.sh  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml
src/: config.py  main.py
src/application/use_cases/: create_user.py  get_user.py
src/domain/exceptions/: exceptions.py
src/domain/i_repos/: i_user_repo.py
src/domain/models/: user.py
src/infrastructure/database/: db.py
src/infrastructure/database/migrations/: env.py
src/infrastructure/database/migrations/versions/: 4c6f6eda0acd_.py
src/infrastructure/database/models/: user.py
src/infrastructure/database/repos/: user_repo.py
src/presentation/api/v1/: router.py
src/presentation/api/v1/endpoints/: user.py
src/presentation/api/v1/schemas/: user.py
