[tool.poetry]
name = "todo-core"
version = "0.1.0"
description = ""
authors = ["AlexCyclop <podobeds2002@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

alembic = "^1.15.1"
asyncpg = "^0.30.0"
fastapi = "^0.115.12"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.39"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.2"
isort = "^6.0.1"
mypy = "^1.15.0"
pre-commit = "^4.2.0"
pylint = "^3.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
